--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -63,8 +63,8 @@
               </div>
               <div class="meta col-xs-12">
                 You can optionally export all deadlines to
-                <a href="https://calendar.google.com/calendar/r?cid={{ site.url }}/crypto-deadlines.ics">Google Calendar</a> or
-                <a href="/crypto-deadlines.ics">.ics</a>.
+                <a href="https://calendar.google.com/calendar/r?cid={{ site.url }}{{ site.baseurl }}/crypto-deadlines.ics">Google Calendar</a> or
+                <a href="{{ site.baseurl }}/crypto-deadlines.ics">.ics</a>.
               </div>
             </div>
         </div>
