Use https for google map

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -88,7 +88,7 @@
                     {% if conf.place == "Online" %}
                     <a href="#">{{conf.place}}</a>.
                     {% else %}
-                    <a href="http://maps.google.com/?q={{conf.place}}">{{conf.place}}</a>.
+                    <a href="https://maps.google.com/?q={{conf.place}}">{{conf.place}}</a>.
                     {% endif %}
                   </span>
                 </div>
